fix contrast errors

--- a/src/app/activity-page-view/activity-page-view.component.css
+++ b/src/app/activity-page-view/activity-page-view.component.css
@@ -94,20 +94,20 @@ img {
 }
 
 .button {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 700;
   text-decoration: none;
   padding: 4px 12px 4px 12px;
   border-radius: 6px;
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 74%, 48%);
   color: #ffffff;
 }
 
 .button:hover {
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 79%, 40%);
 }
 
 .button:active {
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 79%, 40%);
   transform: translateY(4px);
 }
