--- a/src/app/edit-activity/edit-activity.component.css
+++ b/src/app/edit-activity/edit-activity.component.css
@@ -81,23 +81,23 @@ form textarea {
 .button {
   margin-bottom: 24px;
   margin-right: 12px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   text-decoration: none;
   padding: 4px 12px 4px 12px;
   border-radius: 6px;
   border: none;
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 74%, 48%);
   color: hsl(211, 100%, 97%);
 }
 
 .button:hover {
-  background-color: hsl(0, 99%, 54%);
+  background-color: hsl(0, 79%, 40%);
   cursor: pointer;
 }
 
 .button:active {
-  background-color: hsl(0, 99%, 54%);
+  background-color: hsl(0, 79%, 40%);
   transform: translateY(4px);
 }
 img {
