--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,12 +25,12 @@ header .favicon {
 
 .favicon a {
   text-decoration: none;
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 79%, 52%);
   padding: 12px;
   border-radius: 6px;
   color: #ffffff;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 li + li {
@@ -43,16 +43,16 @@ li + li {
   text-decoration: none;
   padding: 4px 12px 4px 12px;
   border-radius: 6px;
-  border: 3px solid hsl(0, 99%, 64%);
+  border: 3px solid hsl(0, 79%, 52%);
   color: #ffffff;
 }
 
 .button:hover {
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 79%, 40%);
 }
 
 .button:active {
-  background-color: hsl(0, 99%, 64%);
+  background-color: hsl(0, 79%, 40%);
   transform: translateY(4px);
 }
 
